--- a/perfumaria/pom.xml
+++ b/perfumaria/pom.xml
@@ -46,6 +46,12 @@
             <artifactId>json-taglib</artifactId>
             <version>0.4.1</version>
         </dependency>
+        
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
     </dependencies>
 
     <build>
